<resources>
    <string name="app_name">Memo</string>
    <string name="desc_activity_main_fab_add">add_new</string>
    <string name="activity_main_tab_note">笔记</string>
    <string name="activity_main_tab_todo">待办</string>
    <string name="activity_main_tab_delete">删除</string>
    <string name="activity_main_tab_select_all">全选</string>
    <string name="activity_main_tab_cancel_select_all">取消全选</string>
    <string name="fragment_note_et_search">搜索笔记</string>
    <string name="activity_note_edit_tab_text">文本编辑</string>
    <string name="activity_note_edit_tab_img">图片</string>
    <string name="activity_note_edit_star">收藏</string>
    <string name="activity_note_edit_title_hint">标题</string>
    <string name="pop_text_edit_tv_title">文本编辑</string>
    <string name="pop_window_tv_note_tag">笔记分类</string>
    <string name="note_null">没有笔记</string>
    <string name="pop_window_img_select_camera">拍照</string>
    <string name="pop_window_img_select_album">从相册选择</string>
    <string name="pop_window_img_select_cancel">取消</string>
</resources>